# HFT

./: .gitignore  CLAUDE.md  CROSS_PLATFORM_GUIDE.md  HFT.cpp  HFT.h  HFT_PERFORMANCE_METRICS.md  HFT_REALISM_RECOMMENDATIONS.md  PERFORMANCE_METRICS.md  README.md  build_cross_platform.sh  execution_simulator.py  main.py  perf_profile.sh  performance_summary.txt  requirements.txt  run_hft_system.sh  test.py  test_ws.py  token_scanner.py
client/: DefaultEWrapper.cpp
cpp/: CMakeLists.txt  Makefile  debug_test.cpp  main.cpp  run_tests.sh  test_latency.cpp  test_latency_enhanced  websocket_test.cpp
cpp/.claude/agents/: hft-debug-analyzer.md
cpp/include/: latency_tracker.hpp  log_control.hpp  market_data_feed.hpp  memory_pool.hpp  order_manager.hpp  orderbook_engine.hpp  signal_engine.hpp  types.hpp
cpp/src/: latency_tracker.cpp  main_system.cpp  market_data_feed.cpp  memory_pool.cpp  order_manager.cpp  orderbook_engine.cpp  signal_engine.cpp
cpp/tests/: performance_benchmark.cpp  test_data_feed.cpp  test_latency.cpp  test_memory.cpp  test_order_manager.cpp  test_orderbook_engine.cpp  test_orderbook_no_callbacks.cpp  test_orderbook_simple.cpp  test_signal_engine.cpp  test_simple_orderbook.cpp
ingest/: orderbook_stream.py  trade_stream.py
tests/: test_quote_engine.py  test_risk_monitor.py
utils/: latency_monitor.py  quote_engine.py  risk_demo.py  risk_manager.py  risk_monitor.py
